@@ -33,15 +33,18 @@
    using Kerberos v5 authentication.
 """
 
-VERSION = '3.16'
+VERSION = "3.16"
 
 import _remctl
 
 # Exception classes.
 
+
 class RemctlError(Exception):
     """The underlying remctl library has returned an error."""
+
     pass
+
 
 class RemctlProtocolError(RemctlError):
     """A remctl protocol error occurred.
@@ -49,22 +52,29 @@ class RemctlProtocolError(RemctlError):
     This exception is only used with the remctl.remctl() simple interface;
     for the full interface, errors are returned as a regular output token.
     """
+
     pass
+
 
 class RemctlNotOpenedError(RemctlError):
     """No open connection to a server."""
+
     pass
+
 
 # Simple interface.
 
+
 class RemctlSimpleResult:
     """An object holding the results from the simple interface."""
+
     def __init__(self):
         self.stdout = None
         self.stderr = None
         self.status = None
 
-def remctl(host, port = None, principal = None, command = []):
+
+def remctl(host, port=None, principal=None, command=[]):
     """Simple interface to remctl.
 
     Connect to HOST on PORT, using PRINCIPAL as the server principal for
@@ -79,33 +89,35 @@ def remctl(host, port = None, principal = None, command = []):
         try:
             port = int(port)
         except ValueError:
-            raise TypeError, 'port must be a number: ' + `port`
+            raise TypeError("port must be a number: " + repr(port))
     if (port < 0) or (port > 65535):
-        raise ValueError, 'invalid port number: ' + `port`
+        raise ValueError("invalid port number: " + repr(port))
     if isinstance(command, (basestring, bool, int, float)):
-        raise TypeError, 'command must be a sequence or iterator'
+        raise TypeError("command must be a sequence or iterator")
 
     # Convert the command to a list of strings.
     mycommand = []
     for item in command:
         mycommand.append(str(item))
     if len(mycommand) < 1:
-        raise ValueError, 'command must not be empty'
+        raise ValueError("command must not be empty")
 
     # At this point, things should be sane.  Call the low-level interface.
     output = _remctl.remctl(host, port, principal, mycommand)
     if output[0] != None:
-        raise RemctlProtocolError, output[0]
+        raise RemctlProtocolError(output[0])
     result = RemctlSimpleResult()
-    setattr(result, 'stdout', output[1])
-    setattr(result, 'stderr', output[2])
-    setattr(result, 'status', output[3])
+    setattr(result, "stdout", output[1])
+    setattr(result, "stderr", output[2])
+    setattr(result, "status", output[3])
     return result
+
 
 # Complex interface.
 
+
 class Remctl:
-    def __init__(self, host = None, port = None, principal = None):
+    def __init__(self, host=None, port=None, principal=None):
         self.r = _remctl.remctl_new()
         self.opened = False
 
@@ -114,65 +126,65 @@ class Remctl:
 
     def set_ccache(self, ccache):
         if not _remctl.remctl_set_ccache(self.r, ccache):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
 
     def set_source_ip(self, source):
         if not _remctl.remctl_set_source_ip(self.r, source):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
 
     def set_timeout(self, timeout):
         if not _remctl.remctl_set_timeout(self.r, timeout):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
 
-    def open(self, host, port = None, principal = None):
+    def open(self, host, port=None, principal=None):
         if port == None:
             port = 0
         else:
             try:
                 port = int(port)
             except ValueError:
-                raise TypeError, 'port must be a number: ' + `port`
+                raise TypeError("port must be a number: " + repr(port))
         if (port < 0) or (port > 65535):
-            raise ValueError, 'invalid port number: ' + `port`
+            raise ValueError("invalid port number: " + repr(port))
 
         # At this point, things should be sane.  Call the low-level interface.
         if not _remctl.remctl_open(self.r, host, port, principal):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
         self.opened = True
 
     def command(self, comm):
         commlist = []
         if not self.opened:
-            raise RemctlNotOpenedError, 'no currently open connection'
+            raise RemctlNotOpenedError("no currently open connection")
         if isinstance(comm, (basestring, bool, int, float)):
-            raise TypeError, 'command must be a sequence or iterator'
+            raise TypeError("command must be a sequence or iterator")
 
         # Convert the command to a list of strings.
         for item in comm:
             commlist.append(str(item))
         if len(commlist) < 1:
-            raise ValueError, 'command must not be empty'
+            raise ValueError("command must not be empty")
 
         # At this point, things should be sane.  Call the low-level interface.
         if not _remctl.remctl_commandv(self.r, commlist):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
 
     def output(self):
         if not self.opened:
-            raise RemctlNotOpenedError, 'no currently open connection'
+            raise RemctlNotOpenedError("no currently open connection")
         output = _remctl.remctl_output(self.r)
         if len(output) == 0:
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
         return output
 
     def noop(self):
         if not self.opened:
-            raise RemctlNotOpenedError, 'no currently open connection'
+            raise RemctlNotOpenedError("no currently open connection")
         if not _remctl.remctl_noop(self.r):
-            raise RemctlError, self.error()
+            raise RemctlError(self.error())
 
     def close(self):
-        del(self.r)
+        del self.r
         self.r = None
         self.opened = False
 
@@ -181,5 +193,5 @@ class Remctl:
             # We do this instead of throwing an exception so that callers
             # don't have to handle an exception when they are trying to find
             # out why an exception occured.
-            return 'no currently open connection'
+            return "no currently open connection"
         return _remctl.remctl_error(self.r)
