@@ -2,6 +2,10 @@
 
 remctl 3.16 (unreleased)
 
+    The Python bindings have been modernized to remove obsolete syntax,
+    which may mean that versions of Python back to Python 2.3 are no
+    longer supported.  The bindings are only tested with Python 2.7.
+
     Add -t flag to the remctl client to specify the network timeout.
     Thanks, Remi Ferrand.
 
